Fix BshClassPath#getBootClassPath() for paths with spaces
See https://github.com/beanshell/beanshell/issues/24